--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
         "@angular/core": "~11.2.12",
         "@angular/fire": "^6.1.5",
         "@angular/forms": "~11.2.12",
-        "@angular/material": "^13.3.5",
         "@angular/platform-browser": "~11.2.12",
         "@angular/platform-browser-dynamic": "~11.2.12",
         "@angular/router": "~11.2.12",
@@ -38,7 +37,7 @@
     },
     "devDependencies": {
         "@angular-devkit/build-angular": "~0.1102.11",
-        "@angular/cli": "^11.2.19",
+        "@angular/cli": "~11.2.11",
         "@angular/compiler-cli": "~11.2.12",
         "@types/jasmine": "~3.6.0",
         "@types/node": "^12.11.1",
